<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/new_Stats"
        android:icon="@drawable/players_icon"
        android:title="@string/menu_stats" />
    <item
        android:id="@+id/new_Live"
        android:icon="@drawable/live"
        android:title="@string/menu_live" />
    <item
        android:id="@+id/new_Assets"
        android:icon="@drawable/rioticon"
        android:title="@string/menu_assets" />
    <item
        android:id="@+id/new_Esports"
        android:icon="@drawable/valorantesports"
        android:title="@string/menu_premier" />
    <item
        android:id="@+id/new_Settings"
        android:icon="@drawable/newcrosshair"
        android:title="@string/menu_extras" />
</menu>
