<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout16"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnSurfaceInverse"
    android:padding="16dp">


    <Button
        android:id="@+id/popup_LogOutButton"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/s92"
        app:icon="@drawable/rioticon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        style="@style/Widget.Material3.MaterialDivider.Heavy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_LogOutButton" />

    <Button
        android:id="@+id/new_Leaderboards"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/s94"
        app:icon="@drawable/rankicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <View
        android:id="@+id/divider2"
        style="@style/Widget.Material3.MaterialDivider.Heavy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_Leaderboards" />

    <Button
        android:id="@+id/new_About"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/s96"
        app:icon="@drawable/just_statics_alot_smaller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <View
        android:id="@+id/divider3"
        style="@style/Widget.Material3.MaterialDivider.Heavy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_About" />

    <Button
        android:id="@+id/popup_donate"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/s97"
        app:icon="@drawable/donate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3" />

    <View
        android:id="@+id/divider4"
        style="@style/Widget.Material3.MaterialDivider.Heavy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_donate" />

    <Button
        android:id="@+id/pfp_reset_language"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/reset_language"
        app:icon="@drawable/common_full_open_on_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider4" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_darkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dark Mode"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pfp_reset_language" />

    <!-- A drop-down menu under divider9 called language selector -->

</androidx.constraintlayout.widget.ConstraintLayout>
