<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout16"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Valorant_SplashColourBackground"
    tools:context=".valo.activities.new_ui.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/Extras_LargePlayerPFP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/agent_background_generic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/circley_PFP"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:elevation="12dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/agent_select_agent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/new_SignOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#d32f2f"
        android:fontFamily="@font/lalezar_reg"
        android:gravity="center"
        android:text="@string/s92"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:icon="@drawable/icons8_riot_games_48"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="#00FFFFFF"
        app:iconTintMode="add"
        app:layout_constraintStart_toStartOf="@+id/Extras_PlayerName"
        app:layout_constraintTop_toBottomOf="@+id/Extras_PlayerName" />

    <Button
        android:id="@+id/new_Leaderboards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/Valorant_Red"
        android:fontFamily="@font/lalezar_reg"
        android:gravity="center"
        android:text="@string/s94"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="33px"
        app:icon="@drawable/rankicon"
        app:iconSize="36dp"
        app:iconTint="@color/light_blue_50"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider9" />

    <Button
        android:id="@+id/new_Chats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Valorant_Red"
        android:fontFamily="@font/lalezar_reg"
        android:gravity="center"
        android:text="@string/s95"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="33px"
        app:icon="@drawable/chats"
        app:iconSize="36dp"
        app:iconTint="@color/light_blue_50"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="@+id/new_Leaderboards"
        app:layout_constraintStart_toStartOf="@+id/new_Leaderboards"
        app:layout_constraintTop_toBottomOf="@+id/new_Leaderboards" />

    <Button
        android:id="@+id/new_About"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Valorant_Red"
        android:fontFamily="@font/lalezar_reg"
        android:gravity="center"
        android:text="@string/s96"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="33px"
        app:icon="@drawable/just_statics_alot_smaller"
        app:iconSize="36dp"
        app:iconTint="@color/light_blue_50"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="@+id/new_Leaderboards"
        app:layout_constraintStart_toStartOf="@+id/new_Leaderboards"
        app:layout_constraintTop_toBottomOf="@+id/new_Chats" />

    <Button
        android:id="@+id/new_Donate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Valorant_Red"
        android:fontFamily="@font/lalezar_reg"
        android:gravity="center"
        android:text="@string/s97"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="33px"
        app:icon="@drawable/donate"
        app:iconSize="36dp"
        app:iconTint="@color/light_blue_50"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="@+id/new_Leaderboards"
        app:layout_constraintStart_toStartOf="@+id/new_Leaderboards"
        app:layout_constraintTop_toBottomOf="@+id/new_About" />

    <Button
        android:id="@+id/new_view_logs_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Valorant_Red"
        android:fontFamily="@font/lalezar_reg"
        android:gravity="center"
        android:text="@string/s98"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="33px"
        app:icon="@drawable/details"
        app:iconSize="36dp"
        app:iconTint="@color/light_blue_50"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="@+id/new_Leaderboards"
        app:layout_constraintStart_toStartOf="@+id/new_Leaderboards"
        app:layout_constraintTop_toBottomOf="@+id/new_Donate" />

    <Button
        android:id="@+id/new_reset_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Valorant_Red"
        android:fontFamily="@font/lalezar_reg"
        android:gravity="center"
        android:text="Reset language"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="33px"
        app:icon="@drawable/common_full_open_on_phone"
        app:iconSize="36dp"
        app:iconTint="@color/light_blue_50"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="@+id/new_Leaderboards"
        app:layout_constraintStart_toStartOf="@+id/new_Leaderboards"
        app:layout_constraintTop_toBottomOf="@+id/new_view_logs_button" />

    <TextView
        android:id="@+id/Extras_PlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/lalezar_reg"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/circley_PFP"
        app:layout_constraintTop_toBottomOf="@+id/extraHelloText"
        tools:text="Duck#2004" />

    <TextView
        android:id="@+id/extraHelloText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lalezar_reg"
        android:text="@string/s91"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circley_PFP"
        app:layout_constraintTop_toTopOf="@+id/circley_PFP" />

    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/Valorant_SplashColourBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_SignOutButton" />

    <!-- A drop down menu under divider9 called language selector -->

</androidx.constraintlayout.widget.ConstraintLayout>
